--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-6">
-                    <h1><a href=""> <img src="img/logo.png" alt="" width="79" height="27"></a></h1>
+                    <h1><a href="#"> <img src="img/logo.png" alt="" width="79" height="27"></a></h1>
                 </div>
                 
                 <div class="col-6 navlist ">
                     <div id="menu" class="dropdown align-center">
                         <ul class="flex ">
-                            <li><a href="">Features</a></li>
+                            <li><a href="#">Features</a></li>
                             <li><a href="">About</a></li>
                             <li><a href="">Pricing</a></li>
                             <li><a href="">Reviews</a></li>
@@ -100,7 +100,7 @@
             </div>
         </div>
     </section>
-    <section class="wrap4">
+    <section class="wrap4" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-2 col-pl-4 col-p-4 tabs">
@@ -300,7 +300,7 @@
             </div>
         </div>
     </section>
-    <section class="wrap8">
+    <section class="wrap8" id="pricing">
         <div class="container">
             <div class="row">
                 <div class="top-head">
@@ -419,7 +419,7 @@
             </div>
         </div>
     </section>
-    <section class="wrap9">
+    <section class="wrap9" id="reviews">
         <div class="container">
             <div class="row">
                 <div class="top-head">
@@ -534,7 +534,7 @@
         </div>
     </section>
 
-    <section class="wrap11">
+    <section class="wrap11" id="contact">
         <div class="container">
             <div class="row">
                 <div class="top-head">
