--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <div id="menu" class="dropdown align-center">
                         <ul class="flex ">
                             <li><a href="#">Features</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Pricing</a></li>
-                            <li><a href="">Reviews</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#pricing">Pricing</a></li>
+                            <li><a href="reviews">Reviews</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
                     <div id="nbutton" class="nav-button" onclick="menuBtn()">
