--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <li><a href="#">Features</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#pricing">Pricing</a></li>
-                            <li><a href="reviews">Reviews</a></li>
+                            <li><a href="#reviews">Reviews</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
